# codename-samp-server

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: dockerhub.yml
gamemodes/: blank.pwn
plugins/: limits.h  main.cpp  main.def
plugins/manager/: map.cpp  map.hpp
plugins/singleton/: redis.cpp  redis.hpp
scriptfiles/: map-1.txt  map-except-1.txt
